<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/flower">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/caffe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/caffe"
                android:scaleType="center"
                android:paddingTop="16dp"
                />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:layout_below="@+id/caffe"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:text="@string/description"
                android:typeface="serif"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:paddingLeft="56dp"
                android:paddingRight="32dp"/>

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_below="@id/description"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact"
                android:paddingLeft="56dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:typeface="serif"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:paddingLeft="56dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/art_caffe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:paddingLeft="56dp"
                android:text="@string/art_caffe"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/description_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/art_caffe"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/description_sec"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/third_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_sec"
                android:paddingLeft="56dp"
                android:paddingRight="32dp"
                android:text="@string/third"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/cappuccino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_text_view"
                android:paddingLeft="88dp"
                android:text="@string/cappuccino"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/passpuccio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cappuccino"
                android:paddingLeft="88dp"
                android:text="@string/paspuccio"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/yogurt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passpuccio"
                android:paddingLeft="88dp"
                android:text="@string/yogurt"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/yogurt"
                android:paddingLeft="88dp"
                android:text="@string/hot_chocolate"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hot"
                android:paddingLeft="88dp"
                android:text="@string/filter_coffee"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/infusi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/filter"
                android:paddingLeft="88dp"
                android:text="@string/infusi_tea"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>

            <TextView
                android:id="@+id/hours_of_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/infusi"
                android:paddingTop="8dp"
                android:paddingLeft="8dp"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="20sp"
                android:typeface="serif"/>
            <TextView
                android:id="@+id/time_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hours_of_operation"
                android:paddingBottom="16dp"
                android:paddingLeft="56dp"
                android:paddingRight="32dp"
                android:text="12hrs    (9:00 A.M to 9:00 P.M)"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:typeface="serif"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


